Wed Dec 29 16:10:21 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Stream.h: Noted that the timeout on the counted send/recv
          methods applies per operation, restarting on retries, not to the
          overall set of retries.

Tue Dec 14 13:13:17 CET 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.0 released.

Wed Dec  8 09:36:00 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * ace/Configuration.cpp:
          Fixed uninitialized use warning.
          
Tue Dec  7 23:07:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3878_Regression_Test.cpp:
          Fixed problem in single threaded build

Tue Dec  7 23:04:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3539_Regression_Test.cpp:
          Fixed problem in single threaded build

Tue Dec  7 15:52:02 UTC 2010  Steve Huston  <shuston@riverace.com>

        * tests/Atomic_Op_Test.cpp: For platforms w/o built-in atomic op
          support, run fewer iterations of the test loop. Those platforms
          sometimes time out during regression tests. This was a problem
          with Riverace's PA-RISC box so if this change causes problems
          otherwise, please let me know.

Mon Dec  6 15:59:52 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/make_release.py:

          Enabled the calls to update_latest_tag() now that the bug in that
          functions has been fixed in:
          Tue Sep 14 16:42:26 UTC 2010  Adam Mitz  <mitza@ociweb.com>

Sat Dec  4 14:25:26 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (timestamp):
        * ace/Log_Msg.cpp (log):
        * ace/Log_Msg_UNIX_Syslog.cpp (log):
        * ace/Log_Record.cpp (format_msg):
        * examples/Misc/test_timestamp.cpp: Cleanups, correcting buffer sizes
          from old 35-char length to 27 based on new timestamp format. Thanks
          to Thomas Lockhart for these.
